--- a/FireResistance.Core/FireResistance.Core.csproj
+++ b/FireResistance.Core/FireResistance.Core.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Entities\Calculations\Interfaces\" />
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 </Project>
