--- a/FireResistance.Web/FireResistance.Web.csproj
+++ b/FireResistance.Web/FireResistance.Web.csproj
@@ -15,4 +15,9 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\FireResistance.Core\FireResistance.Core.csproj" />
+    <ProjectReference Include="..\FireResistance.Report\FireResistance.Report.csproj" />
+  </ItemGroup>
+
 </Project>
