--- a/FireResistance.Web/appsettings.json
+++ b/FireResistance.Web/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-FireResistance.Web-6db13b50-b953-443e-8363-a9e268946e2f;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-FireResistance.Web-6db13b50-b953-443e-8363-a9e268946e2f;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=localhost;user=root;password=123121;Database=FireResistance;"
   },
   "Logging": {
     "LogLevel": {
