--- a/FireResistance.Web/FireResistance.Web.csproj
+++ b/FireResistance.Web/FireResistance.Web.csproj
@@ -22,7 +22,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\FireResistance.Core\FireResistance.Core.csproj" />
-    <ProjectReference Include="..\FireResistance.Report\FireResistance.Report.csproj" />
+    <ProjectReference Include="..\Logger\FireResistance.Logger.csproj" />
   </ItemGroup>
 	
 	
