--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 *.userosscache
 *.sln.docstates
 *.txt
+*.yml
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
@@ -341,3 +342,4 @@ ASALocalRun/
 healthchecksdb
 /Logger/logger.txt
 /Logger/loggerException.txt
+appsettings.json
