--- a/FireResistance.Core/FireResistance.Core.csproj
+++ b/FireResistance.Core/FireResistance.Core.csproj
@@ -12,6 +12,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CalculationException\CalculationException.csproj" />
+    <ProjectReference Include="..\EquationsFromSp\EquationsFromSp.csproj" />
     <ProjectReference Include="..\Logger\FireResistance.Logger.csproj" />
   </ItemGroup>
 
