ArchiveController and FireResistanceController changed

--- a/src/FireResistance.Web/FireResistance.Web.csproj
+++ b/src/FireResistance.Web/FireResistance.Web.csproj
@@ -6,7 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>aspnet-FireResistance.Web-6db13b50-b953-443e-8363-a9e268946e2f</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
-    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
+    <DockerComposeProjectPath>..\..\docker-compose.dcproj</DockerComposeProjectPath>
     <DockerfileContext>..\..</DockerfileContext>
   </PropertyGroup>
 
